<resources>
    <string name="app_name">Evenree - 予定管理アプリ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_place"><font size="14">Place</font></string>
    <string name="hint_description"><font size="14">Description</font></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cat_event">Event</string>
    <string name="cat_sports">Sports</string>
    <string name="cat_travel">Travel</string>
    <string name="cat_concert">Concert</string>
    <string name="cat_drinking">Drinking</string>
    <string name="cat_date">Date</string>
    <string name="cat_comedy">Comedy</string>
    <string name="cat_museum">Museum</string>
    <string name="cat_shopping">Shopping</string>
    <string name="cat_amusement">Amusement</string>
    <string name="cat_movie">Movie</string>
    <string name="cat_book">Book</string>
    <string name="cat_outdoor">Outdoor</string>
    <string name="cat_art">Art</string>
    <string name="cat_game">Game</string>
    <string name="cat_gamble">Gamble</string>
    <string name="cat_streaming">Streaming</string>
    <string name="cat_idol">Idol</string>
    <string name="cat_driving">Driving</string>
    <string name="cat_cooking">Cooking</string>
    <string name="cat_onsen">Onsen</string>
    <string name="cat_workout">Workout</string>
    <string name="logout">Logout</string>
    <string name="public_only">Public only</string>
    <string name="category">Category</string>
    <string name="save">SAVE</string>
    <string name="title">Title</string>
    <string name="all_day">All-day</string>
    <string name="time_setting">Time</string>
    <string name="tbd">TBD</string>
    <string name="personal">Personal</string>
    <string name="repeat">Repeat</string>
    <string name="go_to_calendar">Event List</string>
    <string name="keep_creating">Continue</string>
    <string name="register_to_calendar_app">Register to calendar app</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="agree_checkbox">* Please agree to the check box</string>
    <string name="delete_event">Do you want to delete the event?</string>
    <string name="agree_to_the_terms_of_service">I agree to the Terms of Use</string>
    <string name="agree_to_the_privacy_policy">I agree to the Privacy Policy</string>
    <string name="terms_of_service">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_here">Register here</string>
    <string name="login_here">Login here</string>
    <string name="copy_event">Do you want to copy the event?</string>
    <string name="url_terms_of_use">shorturl.at/uEIWZ</string>
    <string name="url_privacy_policy">https://docs.google.com/document/d/e/2PACX-1vSZGdp9nhtwHfJKOLpgYGVL_0XziOxV6UvSyKZle5LxVwoykhYAMZrRHfAM9lAEKP4uzMwCZEE-QSK-/pub</string>

</resources>