<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mypage_info_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mypage"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/mypage_info_image">

        <LinearLayout
            android:id="@+id/mypage_policy_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/mypage_check_user_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checked="false"
                    />
                <TextView
                    android:id="@+id/mypage_text_terms_of_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_to_the_terms_of_service"
                    android:textSize="14dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/mypage_check_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checked="false"
                    />
                <TextView
                    android:id="@+id/mypage_text_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_to_the_privacy_policy"
                    android:textSize="14dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/mypage_text_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree_checkbox"
            android:textColor="@color/md_theme_dark_errorContainer"
            android:layout_marginLeft="20dp"
            android:visibility="visible"/>


        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:buttonSize="wide" />

        <Button
            android:id="@+id/mypage_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
            android:text="@string/logout"
            android:textColor="@color/md_theme_dark_background" />


    </LinearLayout>

    <Button
        android:id="@+id/mypage_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:backgroundTint="@color/transparent"
        android:textColor="@color/md_theme_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mypage_id"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text=""/>

</androidx.constraintlayout.widget.ConstraintLayout>