<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mypage_info_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/mypage_info"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/mypage_info_image">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_form"
            android:textSize="@dimen/info_fontsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autoLink="web"
            android:text="https://forms.gle/Lkj4WUuxJy5ULi5b7"
            android:textSize="@dimen/info_fontsize" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Google Play Store"
            android:textSize="@dimen/info_fontsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autoLink="web"
            android:text="https://play.google.com/store/apps/details?id=com.magic.eventcalendar"
            android:textSize="@dimen/info_fontsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_service"
            android:textSize="@dimen/info_fontsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autoLink="web"
            android:text="shorturl.at/epIM8"
            android:textSize="@dimen/info_fontsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textSize="@dimen/info_fontsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autoLink="web"
            android:text="shorturl.at/gyJMQ"
            android:textSize="@dimen/info_fontsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Designed by Freepik : Thank you for your help!"
            android:textSize="@dimen/info_fontsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="www.freepik.com"
            android:textSize="@dimen/info_fontsize" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Image by upklyakon Freepik\nImage by freepikon Freepik\nImage by macrovectoron Freepik\nImage by pikisuperstaron Freepik\nImage by vectorpouchon Freepik\nImage by vectorpocketon Freepik\nImage by pch.vectoron Freepik\nImage by katemangostaron Freepik"
            android:textSize="12dp"
            android:textStyle="italic"
            android:textColor="@color/md_theme_dark_secondaryContainer"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>