<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_mypage_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/comedy"/>

        <ImageView
            android:id="@+id/edit_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/edit_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_delete"
            android:background="@drawable/circle"
            android:padding="5dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/edit_copy"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_copy"
            android:background="@drawable/circle"
            android:padding="8dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_delete"/>

        <ImageView
            android:id="@+id/edit_calendar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_calendar_white"
            android:background="@drawable/circle"
            android:padding="7dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_copy"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/edit_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_min"
        android:layout_marginLeft="@dimen/margin_create"
        android:layout_marginRight="@dimen/margin_create"
        android:text="@string/save"
        android:textStyle="normal"
        android:textSize="18dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/edit_mypage_image"/>

    <ScrollView
        android:id="@+id/edit_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_save">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/edit_mypage_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_light_primary"
                android:hint="@string/title"
                android:textSize="22dp"
                android:inputType="text"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_min"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_create"
                    android:src="@drawable/ic_category" />

                <Spinner
                    android:id="@+id/edit_category"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/md_theme_light_primary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_min"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_create"
                    android:src="@drawable/ic_calendar" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/edit_toggle_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/edit_toggle_all_day"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:autoSizeTextType="uniform"
                        android:text="@string/all_day" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/edit_toggle_set_time"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:autoSizeTextType="uniform"
                        android:text="@string/time_setting" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/edit_toggle_undecided"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:autoSizeTextType="uniform"
                        android:text="@string/tbd" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_date_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_min"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_create"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/edit_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="2022/1/1"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_timepicker_layout"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent"/>

                <TimePicker
                    android:id="@+id/edit_timepicker_from"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:timePickerMode="spinner" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_right" />

                <TimePicker
                    android:id="@+id/edit_timepicker_to"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:timePickerMode="spinner" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_min"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_create"
                    android:src="@drawable/ic_place" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:backgroundTint="@color/md_theme_light_primary"
                    android:gravity="left"
                    android:inputType="text"
                    android:textSize="16dp"
                    android:hint="@string/hint_place" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_min"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_create"
                    android:src="@drawable/ic_description" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/md_theme_light_primary"
                    android:gravity="left"
                    android:textSize="16dp"
                    android:hint="@string/hint_description"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_min"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_create"
                    android:src="@drawable/ic_public" />

                <Switch
                    android:id="@+id/edit_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/personal"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_scrollview"/>

</androidx.constraintlayout.widget.ConstraintLayout>